test/types/range/deitz/test_int8_range_big_stride.chpl
var r = 1..100 by 18446744073709551615;
writeln(r);
writeln(r.type:string);
